Thanks to now loaded into site, implemented scss

--- a/src/index.pug
+++ b/src/index.pug
@@ -4,16 +4,18 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title Turing Tested Flags
+        title Pride Flag Typers
+        link(rel="stylesheet", href="index.scss")
     body
         main 
-            h1 Turing Tested Flags 
-
+            h1 Pride Flag Typers
             input#input(type=text placeholder="Insert letters")
-
             br
-
             svg#output
+        
+
+        footer 
+            include:markdown-it:get-thanks-to ../README.md
 
         
         script(src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.min.js")
