Added link to repo

--- a/src/index.pug
+++ b/src/index.pug
@@ -14,7 +14,9 @@ html(lang="en")
             svg#output
         
 
-        footer 
+        footer
+            p Source code available at 
+                a(href="https://github.com/Denperidge/pride-flag-typers") github.com/Denperidge/pride-flag-typers
             include:markdown-it:get-thanks-to ../README.md
 
         
