Basic styling, original post link, generate onload

--- a/src/index.pug
+++ b/src/index.pug
@@ -9,6 +9,10 @@ html(lang="en")
     body
         main 
             h1 Pride Flag Typers
+            p.
+                (See the original post 
+                #[a(href="https://www.tumblr.com/calierthewolf/715868902662569984/if-a-terf-even-looks-at-this-they-will-die-in") here])
+
             input#input(type=text placeholder="Insert letters")
             br
             svg#output
