--- a/src/index.pug
+++ b/src/index.pug
@@ -13,6 +13,11 @@ html(lang="en")
                 (See the original post 
                 #[a(href="https://www.tumblr.com/calierthewolf/715868902662569984/if-a-terf-even-looks-at-this-they-will-die-in") here])
 
+            form#flags
+                each flag in ["lesbian", "trans"]
+                    input(type="checkbox" class="flag-selector" value=flag)
+                    span= flag
+
             input#input(type=text placeholder="Insert letters")
             br
             svg#output
