--- a/src/index.scss
+++ b/src/index.scss
@@ -10,6 +10,8 @@ main {
     flex-direction: column;
     align-items: center;
 
+    //background-color: rgba(255, 255, 255, 0.548);
+
     * {
         margin: 20px 0;
     }
