--- a/src/index.pug
+++ b/src/index.pug
@@ -36,7 +36,7 @@ html(lang="en")
             p Inspiration taken from: #[a(href="https://plasticdino.neocities.org/" target="_blank") plasticdino]
             include:markdown-it:get-thanks-to ../README.md
 
-        
+        script(defer data-domain="flags.neonpastel.net" src="https://plausible.denperidge.com/js/script.js")
         script(src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.min.js")
         script(src="flags.js")
         script(src="index.js")
